--- a/src/catppuccin.user.css
+++ b/src/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name Sunnah Catppuccin
 @namespace github.com/GitMuslim/sunnah
 @homepageURL https://github.com/GitMuslim/sunnah
-@version 1.0.3
+@version 1.0.4
 @updateURL https://github.com/GitMuslim/sunnah/raw/main/src/catppuccin.user.css
 @description Soothing pastel theme for Sunnah
 @author GitMuslim
@@ -99,6 +99,9 @@
     }
     .crumbs {
         background: @crust;
+        color: @text;
+    }
+    .crumbs a {
         color: @text;
     }
     .crumbs a:visited {
@@ -264,9 +267,33 @@
             background-image: url(https://raw.githubusercontent.com/GitMuslim/sunnah/main/assets/sunnah_mocha.png)
         }
     }
+    .bannerMiddle {
+        & when (@lookup = latte) {
+            background-image: url(https://raw.githubusercontent.com/GitMuslim/sunnah/main/assets/sunnah_latte.png)
+        }
+        & when (@lookup = frappe) {
+            background-image: url(https://raw.githubusercontent.com/GitMuslim/sunnah/main/assets/sunnah_frappe.png)
+        }
+        & when (@lookup = macchiato) {
+            background-image: url(https://raw.githubusercontent.com/GitMuslim/sunnah/main/assets/sunnah_macchiato.png)
+        }
+        & when (@lookup = mocha) {
+            background-image: url(https://raw.githubusercontent.com/GitMuslim/sunnah/main/assets/sunnah_mocha.png)
+        }
+    }
     .button {
         background: @surface0;
         color: @color;
+    }
+    .button_expand {
+        background: linear-gradient(fade(@surface0, 0%), fade(@surface0, 51%) 20% ,@surface0 100%);
+    }
+    .button_expand:hover {
+        color: @color;
+        text-shadow: 2px 0px 5px fade(@color, 42%);
+    }
+    .englishcontainer, .arabic_hadith_full {
+        color: @text;
     }
   } 
 
