--- a/src/catppuccin.user.css
+++ b/src/catppuccin.user.css
@@ -2,8 +2,9 @@
 @name Sunnah Catppuccin
 @namespace github.com/GitMuslim/sunnah
 @homepageURL https://github.com/GitMuslim/sunnah
-@version 1.0.9
+@version 1.1.0
 @updateURL https://github.com/GitMuslim/sunnah/raw/main/src/catppuccin.user.css
+@supportURL https://github.com/GitMuslim/sunnah/issues
 @description Soothing pastel theme for Sunnah
 @author GitMuslim
 @license MIT
@@ -50,6 +51,10 @@
     @mantle: @catppuccin[@@lookup][@mantle];
     @crust: @catppuccin[@@lookup][@crust];
     @color: @catppuccin[@@lookup][@@accent];
+    
+    em {
+      --highlight-color: fade(@color, 12.5%);
+    }
     
     #site, #sidePanel {
       background: @base;
